[package]
name = "tilt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.35"
dirs = "6.0.0"
reqwest = { version = "0.11.27", features = ["multipart", "json"] }
rusqlite = "0.34.0"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v4"] }
