[package]
name = "tilt-cli"
version = "0.2.0"
edition = "2024"
description = "CLI for interacting with the Tilt distributed processing platform"
license-file = "LICENSE"


[[bin]]
name = "tilt"
path = "src/main.rs"


[dependencies]
anyhow = "1"
clap = { version = "4.5.35", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.11.27", features = ["multipart", "json"] }
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
axum = "0.8.8"
open = "5.3.3"
base64 = "0.21.0"
sha2 = "0.10.8"
rand = "0.8.5"
url = "2.3.1"
