[package]
name = "{project_name}"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "tilt:sdk"

[package.metadata.component.dependencies]

[package.metadata.tilt]
program_id = "{program_id}"
